add other voting systems

--- a/apps/election-site/index.html
+++ b/apps/election-site/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Website for rank and approve voting"
+      content="Create elections with different voting methods"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Rank and Approve Voting</title>
+    <title>VoteLab</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
